Fixed double text rendering on iOS

--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@
     display: flex;
     font-weight: normal;
     flex-wrap: nowrap;
+    text-shadow: 0 0 0;
     align-items: center;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -99,6 +100,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 10px;
+  text-shadow: 0 0 0;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s, box-shadow 0.2s;
   cursor: pointer;
